SCMOD-6144: Updated staging service to be tenant aware (#8)
